syntax = "proto3";
option go_package = "github.com/MangoSteen0903/go-grpc-tour/blog/proto";
package blog;
import "google/protobuf/empty.proto";

service Blog {
  rpc CreatePost(Post) returns (PostId);
  rpc ReadPost(PostId) returns (Post);
  rpc UpdatePost(Post) returns (Status);
  rpc DeletePost(PostId) returns (Status);
  rpc ListPost(google.protobuf.Empty) returns (stream Post);
}

message Post {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
}

message Status { bool ok = 1; }

message PostId { string id = 1; }